2.6.1 更新支持dili-parent