@@ -20,7 +20,7 @@
 	<parent>
 		<artifactId>dili-uap</artifactId>
 		<groupId>com.dili</groupId>
-		<version>2.6.0-SNAPSHOT</version>
+		<version>2.6.1-SNAPSHOT</version>
 	</parent>
 
 	<build>
@@ -60,7 +60,13 @@
 					<target>13</target>
 					<encoding>UTF-8</encoding>
 					<parameters>true</parameters>
-					<compilerArgument>-proc:none</compilerArgument>
+					<compilerArgs>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
